objects/Asset.object
<CustomObject>
    <fields>
        <fullName>ASR_Project_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a hidden field used specifically for Add/Swap/Reconfigure Projects to assist in reporting on Asset HPD on the Project record page.</description>
        <label>ASR Project Lookup</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assets (ASR Project Lookup)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATM_Functionality_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATM Functionality Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATM_Manufacturer_Type__c</fullName>
        <description>The manufacturer of the ATM</description>
        <label>ATM Manufacturer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyosung</fullName>
                </value>
                <value>
                    <fullName>Genmega</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATM_Type__c</fullName>
        <description>The model of the ATM</description>
        <label>ATM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MX2600SE</fullName>
                </value>
                <value>
                    <fullName>MX2800SE</fullName>
                </value>
                <value>
                    <fullName>NH2600SE</fullName>
                </value>
                <value>
                    <fullName>NH2700SE</fullName>
                </value>
                <value>
                    <fullName>NH1800CE</fullName>
                </value>
                <value>
                    <fullName>NH1800SE</fullName>
                </value>
                <value>
                    <fullName>G2500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amusement_Class__c</fullName>
        <description>Type of amusement equipment</description>
        <label>Amusement Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dart</fullName>
                </value>
                <value>
                    <fullName>PoolTable</fullName>
                </value>
                <value>
                    <fullName>JukeBox</fullName>
                </value>
                <value>
                    <fullName>Redemption</fullName>
                </value>
                <value>
                    <fullName>Crane</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shuffleboard</fullName>
                </value>
                <value>
                    <fullName>GoldenTee</fullName>
                </value>
                <value>
                    <fullName>Arcade</fullName>
                </value>
                <value>
                    <fullName>Changer</fullName>
                </value>
                <value>
                    <fullName>Ticket Redemption</fullName>
                </value>
                <value>
                    <fullName>Pinball</fullName>
                </value>
                <value>
                    <fullName>TableTop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Count__c</fullName>
        <formula>IF(AND((RecordType.Name =&quot;VGT&quot;),(NOT(ISBLANK( VGT_Live_Date__c )))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_G2S_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset G2S Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Grade__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Asset Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Id_Fx__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Id Fx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Name_Account_Name__c</fullName>
        <description>This field is used for reporting.</description>
        <formula>Name + &quot; - &quot; +  Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Name + Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Naming_Convention__c</fullName>
        <formula>Name + &quot; - &quot; +  &quot;SAS &quot; + SAS__c + &quot; - &quot; +  &quot;Model &quot; + Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Naming Convention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Notes__c</fullName>
        <label>Asset Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Playable_Image__c</fullName>
        <formula>IF(  ISPICKVAL(Asset_Playable_Status__c, &quot;Playable&quot;), IMAGE(&quot;/resource/1659971093000/Small_Green_Checkbox?&quot;, &quot;Yes&quot;), 
			IF(ISPICKVAL(Asset_Playable_Status__c,&quot;Nonplayable&quot;), IMAGE(&quot;/resource/1659971112000/Small_Red_X?&quot;, &quot;No&quot;), &quot;Unknown&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Playable Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Playable_Status__c</fullName>
        <description>Field used to denote if the Asset is playable or not at the location</description>
        <label>Asset Playable Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Playable</fullName>
                </value>
                <value>
                    <fullName>Nonplayable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <label>Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Ram Clear</fullName>
                </value>
                <value>
                    <fullName>Needs Service</fullName>
                </value>
                <value>
                    <fullName>As Is</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Azure_External_Id__c</fullName>
        <description>Field used to link to record in Azure</description>
        <externalId>true</externalId>
        <label>Azure External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BV_Type__c</fullName>
        <description>Bill Vaildator Type</description>
        <label>BV Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JCM</fullName>
                </value>
                <value>
                    <fullName>MEI</fullName>
                    <default>true</default>
                    <label>MEI</label>
                </value>
                <value>
                    <fullName>Small MEI</fullName>
                </value>
                <value>
                    <fullName>NV-200</fullName>
                </value>
                <value>
                    <fullName>ICT PA7</fullName>
                </value>
                <value>
                    <fullName>ICT TAO-A</fullName>
                </value>
                <value>
                    <fullName>MEI2831U</fullName>
                </value>
                <value>
                    <fullName>MEI SC Advance</fullName>
                </value>
                <value>
                    <fullName>JCM UBA10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bally_Panel_Update__c</fullName>
        <label>Bally Button Panel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ideck</fullName>
                </value>
                <value>
                    <fullName>Analog</fullName>
                </value>
                <value>
                    <fullName>Analog 7 Segment Buttons Panel</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                    <isActive>false</isActive>
                    <label>-</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Board_Serial_Number__c</fullName>
        <label>Board Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COAM_Position__c</fullName>
        <label>COAM Position</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ID__c</fullName>
        <description>External ID used for CRM Migration</description>
        <externalId>true</externalId>
        <label>CRM ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabinet_Type__c</fullName>
        <label>Cabinet Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabinets__c</fullName>
        <label>Cabinet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WMS</fullName>
                </value>
                <value>
                    <fullName>Spielo</fullName>
                </value>
                <value>
                    <fullName>IGT</fullName>
                </value>
                <value>
                    <fullName>Bally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cases_In_Last_Month__c</fullName>
        <label>Cases In Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_in_Last_24_Hours__c</fullName>
        <label>Cases in Last 24 Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_in_the_Last_7_Days__c</fullName>
        <label>Cases in the Last 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_Type__c</fullName>
        <description>Type of cassette ATM uses</description>
        <label>Cassette Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2K</fullName>
                </value>
                <value>
                    <fullName>1K</fullName>
                </value>
                <value>
                    <fullName>GENMEGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_In_Lifetime_Meter__c</fullName>
        <formula>Current_Lifetime_Meter__c -  Previous_Lifetime_Meter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change In Lifetime Meter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Region__c</fullName>
        <formula>TEXT(Account.Collection_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <description>The amount the location receives from the surcharge fee on the redemption terminal.</description>
        <label>Commission Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <description>Common Name for Software on VGT</description>
        <label>Common Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARI GameSet 1</fullName>
                </value>
                <value>
                    <fullName>ARI GameSet 2</fullName>
                </value>
                <value>
                    <fullName>ARI Gameset 2.1</fullName>
                </value>
                <value>
                    <fullName>BAD DOG GAMES, HOLLYWOOD</fullName>
                </value>
                <value>
                    <fullName>Baddog Games Hollywood</fullName>
                </value>
                <value>
                    <fullName>Bally V22 Max Bet</fullName>
                </value>
                <value>
                    <fullName>Bally V32 / Wave Max Bet</fullName>
                </value>
                <value>
                    <fullName>Banilla Diamond Skill</fullName>
                </value>
                <value>
                    <fullName>Banilla Diamond Skill 6</fullName>
                </value>
                <value>
                    <fullName>Banilla Diamond Skill 7</fullName>
                </value>
                <value>
                    <fullName>Banilla Diamond Skill 8</fullName>
                </value>
                <value>
                    <fullName>Banilla Diamond Skill 9</fullName>
                </value>
                <value>
                    <fullName>Banilla Fusion 1</fullName>
                </value>
                <value>
                    <fullName>Banilla Fusion 2</fullName>
                </value>
                <value>
                    <fullName>Banilla Fusion 3</fullName>
                </value>
                <value>
                    <fullName>Banilla Fusion 4</fullName>
                </value>
                <value>
                    <fullName>Banilla Fusion 5</fullName>
                </value>
                <value>
                    <fullName>Banilla Fusion Link</fullName>
                </value>
                <value>
                    <fullName>Banilla Platinum 1</fullName>
                </value>
                <value>
                    <fullName>Banilla Platinum 2</fullName>
                </value>
                <value>
                    <fullName>Banilla Platinum 3</fullName>
                </value>
                <value>
                    <fullName>Banilla Skyriser</fullName>
                </value>
                <value>
                    <fullName>BB2 GameSet 1</fullName>
                </value>
                <value>
                    <fullName>BB2 GameSet 2</fullName>
                </value>
                <value>
                    <fullName>BB2 GameSet 3</fullName>
                </value>
                <value>
                    <fullName>BB2 GameSet 5</fullName>
                </value>
                <value>
                    <fullName>BB2 GameSet 5 Max Bet</fullName>
                </value>
                <value>
                    <fullName>Blade GameSet 4</fullName>
                </value>
                <value>
                    <fullName>Blade GameSet 6</fullName>
                </value>
                <value>
                    <fullName>Blade GameSet 6 Max Bet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connection_Type__c</fullName>
        <description>How the ATM is connected online</description>
        <label>Connection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CradlePoint</fullName>
                </value>
                <value>
                    <fullName>OptConnect</fullName>
                </value>
                <value>
                    <fullName>TCP/IP</fullName>
                </value>
                <value>
                    <fullName>Phone Line</fullName>
                </value>
                <value>
                    <fullName>Broadband WIFI</fullName>
                </value>
                <value>
                    <fullName>Broadband</fullName>
                </value>
                <value>
                    <fullName>Broadband w/ RT</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cook_County_Sticker_Number__c</fullName>
        <label>Cook County Sticker Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cook_County_Sticker__c</fullName>
        <label>Cook County Sticker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cook_County_Stickers_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cook County Stickers Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_VGT_Software_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by a process to remove the software pl field off assets.</description>
        <inlineHelpText>Created by a process to remove the software pl field off assets.</inlineHelpText>
        <label>Created by VGT Software Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Info__c</fullName>
        <formula>IF( RecordType.Name =&quot;VGT&quot;,  Name &amp; &quot; &quot;&amp;  Model__c &amp; &quot;, &quot;&amp;&quot;           Serial: &quot;&amp; SerialNumber ,Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lifetime_Meter__c</fullName>
        <label>Current Lifetime Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Open_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Open Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Assets (Current Open Case)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBA_Text__c</fullName>
        <description>Special text field so Assets is searchable by searching the Account Name</description>
        <label>DBA Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Fee__c</fullName>
        <label>Data Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decommissioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decommissioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defective__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the particular product as defective.</description>
        <inlineHelpText>Identifies the particular product as defective.</inlineHelpText>
        <label>Defective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Approval_Number__c</fullName>
        <label>Device Approval Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>23 Slant</fullName>
                </value>
                <value>
                    <fullName>Aristocrat</fullName>
                </value>
                <value>
                    <fullName>V27</fullName>
                </value>
                <value>
                    <fullName>Bally 22</fullName>
                </value>
                <value>
                    <fullName>Bally 32</fullName>
                </value>
                <value>
                    <fullName>Wave</fullName>
                </value>
                <value>
                    <fullName>CGC</fullName>
                </value>
                <value>
                    <fullName>AXXIS</fullName>
                </value>
                <value>
                    <fullName>Crystal</fullName>
                </value>
                <value>
                    <fullName>E 20</fullName>
                </value>
                <value>
                    <fullName>G 23</fullName>
                </value>
                <value>
                    <fullName>Bar Top</fullName>
                </value>
                <value>
                    <fullName>VIP II</fullName>
                </value>
                <value>
                    <fullName>VIP Lounge</fullName>
                </value>
                <value>
                    <fullName>Spielo</fullName>
                </value>
                <value>
                    <fullName>VU Slant</fullName>
                </value>
                <value>
                    <fullName>WMS BB2</fullName>
                </value>
                <value>
                    <fullName>WMS Meta</fullName>
                </value>
                <value>
                    <fullName>WMS Blade</fullName>
                </value>
                <value>
                    <fullName>WMS S32</fullName>
                </value>
                <value>
                    <fullName>WMS S23</fullName>
                </value>
                <value>
                    <fullName>Safe Cash</fullName>
                </value>
                <value>
                    <fullName>M3T</fullName>
                </value>
                <value>
                    <fullName>NRT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>VGT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Equipment)</relationshipLabel>
        <relationshipName>Assets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Drained_Date__c</fullName>
        <label>Estimated Drained Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Four_Week_HPD__c</fullName>
        <description>4 Week HPD Average pulled from Aggregated HPD Total Record.</description>
        <formula>Hold_Per_Day_Total__r.Four_Week_HPD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>4 Week HPD Average pulled from Aggregated HPD Total Record.</inlineHelpText>
        <label>4 Week HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G2S_Live_Date__c</fullName>
        <label>Remote G2S Push Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Manufacturer__c</fullName>
        <description>Manufacturer Field from GP Integration</description>
        <label>GP_Manufacturer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game_Set__c</fullName>
        <label>Game Set</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gameset_Common_Name__c</fullName>
        <description>This field replaces the old Common Name field.</description>
        <formula>Gameset__r.Common_Name__r.Name</formula>
        <inlineHelpText>This field replaces the old Common Name field.</inlineHelpText>
        <label>Gameset Common Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gameset_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gameset Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gameset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created to replace the picklist field called &quot;software__c&quot; (label &quot;Gameset&quot;)</description>
        <inlineHelpText>This field replaces the old Gameset picklist field.</inlineHelpText>
        <label>Gameset (New)</label>
        <referenceTo>Gameset__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPD_12_Week__c</fullName>
        <formula>Hold_Per_Day_Total__r.Twelve_Week_HPD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD - 12-Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hold_Per_Day_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains All Aggregated information for HPD Records for this Machine.</description>
        <inlineHelpText>Contains All Aggregated information for HPD Records for this Machine.</inlineHelpText>
        <label>Hold Per Day Total</label>
        <referenceTo>Hold_Per_Day_Total__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IGB_Lock_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary check box to see if Accel has changed the locks on the CPU of the VGT</description>
        <inlineHelpText>Has the IGB lock been changed on the CPU</inlineHelpText>
        <label>IGB Lock Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGT_PE_BIOS__c</fullName>
        <label>IGT_PE BIOS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apr00003</fullName>
                </value>
                <value>
                    <fullName>Apr00004</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intralot_Confirmation_Date__c</fullName>
        <label>Intralot Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intralot_Reference_Number__c</fullName>
        <label>Intralot Reference Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Request_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The inventory request line item that generated this asset.</description>
        <inlineHelpText>The inventory request line item that generated this asset.</inlineHelpText>
        <label>Inventory Request Line Item</label>
        <referenceTo>Inventory_Request_Line_Item__c</referenceTo>
        <relationshipLabel>Line Item Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Inventory Request that generated this item.</description>
        <label>Inventory Request</label>
        <referenceTo>Inventory_Request__c</referenceTo>
        <relationshipLabel>All Line Item Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Content__c</fullName>
        <description>The description of the software item.</description>
        <inlineHelpText>The description of the software item.</inlineHelpText>
        <label>Item Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Upgrade_Date__c</fullName>
        <label>Last Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_SW_Serial__c</fullName>
        <description>The Serial Number delivered via the Available SW as of XYZ Spreadsheet from parts prior to ETL to transform into the SW Serial Number</description>
        <externalId>true</externalId>
        <inlineHelpText>The Serial Number delivered via the Available SW as of XYZ Spreadsheet from parts prior to ETL to transform into the SW Serial Number</inlineHelpText>
        <label>Legacy SW Serial #</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>M3T_Security_Bar_Installed__c</fullName>
        <label>M3T Security Bar Installed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>AVS Side Bar</fullName>
                </value>
                <value>
                    <fullName>AVS Top Bar</fullName>
                </value>
                <value>
                    <fullName>Bully Bar</fullName>
                </value>
                <value>
                    <fullName>AVS Side Bar &amp; AVS Top Bar</fullName>
                </value>
                <value>
                    <fullName>AVS Side Bar &amp; Bully Bar</fullName>
                </value>
                <value>
                    <fullName>AVS Top Bar &amp; Bully Bar</fullName>
                </value>
                <value>
                    <fullName>AVS Side Bar &amp; AVS Top Bar &amp; Bully Bar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mac_Address__c</fullName>
        <label>Mac Address</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Class__c</fullName>
        <description>Machine model of the amusement equipment</description>
        <label>Machine Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Id__c</fullName>
        <label>Machine Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Software</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>